Adds a test for setting empty composition text.

BUG=682199

Review-Url: https://codereview.chromium.org/2710603002
Cr-Commit-Position: refs/heads/master@{#451708}

Former-commit-id: c49d32e2554c23beb02be20061c0b9784476fe98